--- a/rentomojo/package.json
+++ b/rentomojo/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "formik": "^2.2.9",
     "framer-motion": "^7.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
